--- a/stack.yaml
+++ b/stack.yaml
@@ -40,7 +40,9 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 
 extra-deps:
-  - moffy-samples-gtk3-run-0.1.0.2
+  - moffy-samples-gtk3-run-0.1.0.7
+#  - git: https://github.com/YoshikuniJujo/moffy-samples-gtk3-run
+#    commit: a779ab8cb3144af9474527e2bd25d85afb09d94c
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
