--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: nightly-2023-12-19
+resolver: nightly-2024-01-03
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -40,9 +40,10 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 
 extra-deps:
+  - moffy-samples-0.1.0.3
+  - moffy-samples-events-0.2.2.5
   - moffy-samples-gtk3-run-0.1.0.7
-#  - git: https://github.com/YoshikuniJujo/moffy-samples-gtk3-run
-#    commit: a779ab8cb3144af9474527e2bd25d85afb09d94c
+  - simple-pango-0.1.0.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
